keine Verbesserungen in CSS und Html gemacht

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button onclick="mehr()"id="+">+</button>
     <input type="text" id="text">
     <button onclick="anmelden()"id="anu">Anmelden</button>
+    <button><input type="checkbox"></button>
     </div>
     <div id="screen"></div>
 </body>
