--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <div id="Menu">
     <h1>Task Leiste</h1>
-    <button onclick="mehr()"id="+">+</button>
     <input type="text" id="text">
-    <button onclick="anmelden()"id="anu">Anmelden</button>
-    <button><input type="checkbox"></button>
+    <button onclick="mehr()"id="+">Hinzufügen</button>
+    <button onclick="anmelden()" id="anu">Anmelden</button>
     </div>
-    <div id="screen"></div>
+    <div id="screen">
+    <h2>Tasks</h2>
+    </div>
 </body>
 </html>
